force-app/main/default/objects/Event_Calendar__c/Event_Calendar__c.object-meta.xml
<CustomObject>
    <label>Event Calendar</label>
    <nameField>
        <label>Event Calendar</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Calendars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>