force-app/main/default/objects/Event_Calendar__c/fields/Event_Management__c.field-meta.xml
<CustomField>
    <fullName>Event_Management__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Management</label>
    <referenceTo>Event_Management__c</referenceTo>
    <relationshipLabel>Event Calendars</relationshipLabel>
    <relationshipName>Event_Calendars</relationshipName>
    <type>Lookup</type>
</CustomField>