force-app/main/default/objects/Event_Calendar__c/fields/Teacher__c.field-meta.xml
<CustomField>
    <fullName>Teacher__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Teacher</label>
    <referenceTo>Teacher__c</referenceTo>
    <relationshipLabel>Event Calendars</relationshipLabel>
    <relationshipName>Event_Calendars</relationshipName>
    <type>Lookup</type>
</CustomField>