force-app/main/default/objects/Event_Calendar__c/fields/To__c.field-meta.xml
<CustomField>
    <fullName>To__c</fullName>
    <label>To</label>
    <type>DateTime</type>
</CustomField>